turned down volume, fixed center align of gamse

--- a/games/style.css
+++ b/games/style.css
@@ -7,6 +7,9 @@ h1 {
 h2 {
   text-align: center;
 }
+h3 {
+    text-align: center;
+}
 iframe {
     display: block;
     border-style: none;
